tests/errors/variant_flow/downcast_in_switch_place_without_refinement.sim

            enum Inner { P: unit Q: unit }
            enum Outer { X: Inner Y: unit }
            fn f(o: Outer) {
              entry:
                switchEnum(o as X) [P: pb, Q: qb]
              pb: return
              qb: return
            }
            